--- a/Changes
+++ b/Changes
@@ -3,3 +3,5 @@ Revision history for WebService-ThrowAwayMail
 0.01    Date/time
         First version, released on an unsuspecting world.
 
+0.03    15/03/2017
+        - Validate that no parameters can be passed to sub routines get and get_alias
